// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-media-type-siblings should get sibling media types 1`] = `
{
  "content": [
    {
      "text": "{"totalBefore":2,"totalAfter":0,"items":[{"icon":"icon-folder","isDeletable":true,"isFolder":false,"name":"_Test Target MediaType","id":"00000000-0000-0000-0000-000000000000","parent":{"id":"00000000-0000-0000-0000-000000000000"},"flags":[],"hasChildren":false}]}",
      "type": "text",
    },
  ],
}
`;

exports[`get-media-type-siblings should handle non-existent media type 1`] = `
{
  "content": [
    {
      "text": "Error using get-media-type-siblings:
{
  "message": "Request failed with status code 404",
  "response": ""
}",
      "type": "text",
    },
  ],
}
`;
